<resources>
    <string name="app_name">Essteling Experience</string>
    <string name="Menu">Menu</string>
    <string name="Meetmij">Meet Mij</string>
    <string name="Metingen">Metingen</string>
    <string name="NaamAttractie">Attractie</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Progress">Progress</string>
    <string name="Delen">Delen</string>
    <string name="Verwijderen">Verwijderen</string>
    <string name="Hoogte">Hoogte</string>
    <string name="Gemiddelde">Gemiddelde</string>
    <string name="Hoogste">Hoogste</string>
    <string name="Snelste">Snelste</string>
    <string name="Snelheid">Snelheid</string>
    <string name="meting">Meting</string>
    <string name="Datum">Datum</string>
</resources>
