<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a3deff"
    tools:context="com.experience.essteling.a3.esstelingexperience.AttractieMetingSpec">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/transparent" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_naamAttractie"
        android:layout_width="229dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/NaamAttractie"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <ImageView
        android:id="@+id/im_meeting_attractie"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_attractie_meting_spec_hoogte"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:color/background_dark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.328" />

    <Button
        android:id="@+id/btn_attractie_meting_spec_delen"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:background="@color/TransparentButton"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Delen"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/im_meeting_attractie"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_naamAttractie"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/btn_attractie_meting_spec_meetmij"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/TransparentButton"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Meetmij"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_attractie_meting_spec_verwijderen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/btn_attractie_meting_spec_delen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_naamAttractie"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/btn_attractie_meting_spec_verwijderen"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@color/TransparentButton"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Verwijderen"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_attractie_meting_spec_delen"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_attractie_meting_spec_delen"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/btn_attractie_meting_spec_meetmij" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_hoogte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="257dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Hoogte"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_attractie_meting_spec_delen"
        app:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_h_gem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Gemiddelde"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_hoogte"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_h_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Hoogste"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_h_gem"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/im_meeting_gr_h"
        android:layout_width="217dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_h_max"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_attractie_meting_spec_snelheid"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_snelheid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/Snelheid"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="432dp" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_s_gem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Gemiddelde"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_snelheid"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_s_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Snelste"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_s_gem"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp" />

    <ImageView
        android:id="@+id/im_meeting_gr_s"
        android:layout_width="217dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attractie_meting_spec_s_max"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_h_gem_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintLeft_toRightOf="@+id/tv_attractie_meting_spec_h_gem"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_attractie_meting_spec_h_gem"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_attractie_meting_spec_h_max_i"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_h_max_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="TextView"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintLeft_toRightOf="@+id/tv_attractie_meting_spec_h_max"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_attractie_meting_spec_h_max"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="-7dp"
        app:layout_constraintHorizontal_bias="0.555" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_s_gem_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintLeft_toRightOf="@+id/tv_attractie_meting_spec_s_gem"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_attractie_meting_spec_s_gem"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_attractie_meting_spec_s_max_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintLeft_toRightOf="@+id/tv_attractie_meting_spec_s_max"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_attractie_meting_spec_s_max"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>