<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafaf7"
    tools:context="com.experience.essteling.a3.esstelingexperience.UI.MeetMij">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/background3_meetmij"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/railsje"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/background1_meetmij"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/background2_meetmij"
        android:layout_width="220dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/karratjerechts"
        app:layout_constraintTop_toTopOf="@+id/background1_meetmij"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/background1_meetmij"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/background1_meetmij"
        app:layout_constraintBottom_toBottomOf="@+id/background1_meetmij"
        android:layout_marginBottom="0dp" />

    <ImageView
        android:id="@+id/background1_meetmij"
        android:layout_width="220dp"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/karratjerechts"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_meet_mij_status"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/tv_meet_mij_meetmij"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily=""
        android:text="@string/Meetmij"
        android:textColor="@color/Rood"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/background1_meetmij"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/tv_meet_mij_attractie"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/NaamAttractie"
        android:textColor="@id/titel1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meet_mij_meetmij"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_meet_mij_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="8dp"
        android:background="@color/Rood"
        android:text="@string/Start"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background3_meetmij"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/btn_meet_mij_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/Rood"
        android:text="@string/Stop"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintLeft_toRightOf="@+id/btn_meet_mij_start"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/background3_meetmij"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_meet_mij_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wacht..."
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_meet_mij_attractie" />

</android.support.constraint.ConstraintLayout>
